--- a/components/backend-tests-go-vgaxqmdv/overlays/development/deployment-patch.yaml
+++ b/components/backend-tests-go-vgaxqmdv/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: backend-tests-go-vgaxqmdv
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/rhtap-task-runner:latest
-        name: container-image  
+        - image: quay.io/rhtap_qe/backend-tests-go-vgaxqmdv:8d560a80f15f708502c46a96c197b75b81e6ee0f@sha256:81a4de5dac90d8c6a6b6f48b183018de386f02b904717cfd0fc6f3857a29a1ad
+          name: container-image
